--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -63,15 +63,17 @@ block content
 
                     p.g-loader__text Запаситесь чашечкой чая или кофе — для просмотра всех работ потребуется больше 50 минут.
         .b-treatment.g-mt20
-            .b-treatment__content
-                .container
-                    p.b-treatment__title Вместе с эффектной графикой анализ рекламной площадки
+            .b-treatment__gradient
+            .container.b-treatment__container
+                .b-treatment__image
+
+                .b-treatment__content
+                    p.b-treatment__title Эффектная графика#[br]с анализом рекламной#[br]площадки
 
                     .b-treatment__text
-                        p Эффектная графика и анимация ещё не гарантируют поток посетителей. Важно, как рекламное предложение привлекает к себе внимание на конкрентной странице.
-                        p Чтобы выделить предложение, я и моя команда анализируем площадку и информационное окружение баннера. Предлагаем цветовую гамму, стилистику и анимацию для преодоления «баннерной слепоты» и привлечения внимания посетителей.
-                        p Если нужно, помогаем разместить баннер на странице сайта или рекламной площадке.
-                    .b-treatment__name #[b Толкунов Дмитрий]#[br]директор студии
+                        p Чтобы выделить предложение, я и моя команда анализируем площадку и информационное окружение баннера. Разрабатываем стилистику и анимацию для преодоления «баннерной слепоты» и привлечения внимания посетителей.
+                    b.b-treatment__name Толкунов Дмитрий
+                    p.b-treatment__role директор студии
 
                     .b-treatment-links.b-treatment__links
                         a.b-treatment-links__item.b-treatment-links__item_vk(href='#')
