--- a/src/templates/includes/head.jade
+++ b/src/templates/includes/head.jade
@@ -22,6 +22,7 @@ head
         script(src='assets/vendor/bootstrap/dist/js/bootstrap.min.js')
         script(src='assets/vendor/masonry/dist/masonry.pkgd.min.js')
         script(src='assets/vendor/slick-carousel/slick/slick.min.js')
+        script(src='assets/vendor/retina.js/dist/retina.min.js')
         script(src='assets/vendor/fancybox/source/jquery.fancybox.pack.js?v=2.1.5')
         script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-media.js')
         //script(src='assets/vendor/fancybox/source/helpers/jquery.fancybox-thumbs.js')
