last fixes + add b-checkbox to forms

--- a/src/blocks/b-reviews/b-reviews.less
+++ b/src/blocks/b-reviews/b-reviews.less
@@ -194,8 +194,9 @@
 
 /* Social icons */
 .b-reviews__social-icon {
-	width: 25px;
-	height: 25px;
+	width: 25px !important;
+	height: 25px !important;
+	background-size: 25px 25px;
 	background-repeat: no-repeat;
 	background-image: url("../../assets/img/social-icons.png");
 }
@@ -222,8 +223,9 @@
 
 /* Forum icons */
 .b-reviews__forum-icon {
-	width: 25px;
-	height: 25px;
+	width: 25px !important;
+	height: 25px !important;
+	background-size: 25px 25px;
 	background-repeat: no-repeat;
 	background-image: url("../../assets/img/forum-icons.png");
 }
