--- a/src/less/common.less
+++ b/src/less/common.less
@@ -317,3 +317,8 @@ body {
 .alert-block {
 	text-align: left;
 }
+
+[data-rjs-processed="true"][width="0"][height="0"] {
+	width: auto !important;
+	height: auto !important;
+}
