--- a/src/blocks/b-clients/b-clients.less
+++ b/src/blocks/b-clients/b-clients.less
@@ -33,8 +33,8 @@
 			border-bottom-color: #1abc9c;
 		}
 
-		.b-clients__image:not(.b-clients__image_empty) {
-			filter: grayscale(1);
+		.b-clients__image {
+			filter: none;
 		}
 	}
 
@@ -72,4 +72,10 @@
 }
 
 .b-clients__image {
+	max-height: 40px !important;
+	max-width: 150px !important;
+}
+
+.b-clients__image:not(.b-clients__image_empty) {
+	filter: grayscale(1);
 }
