--- a/src/templates/order_2.jade
+++ b/src/templates/order_2.jade
@@ -48,7 +48,7 @@ block content
                     .form-group
                         .b-checkbox
                             input(type="checkbox", id="FeedBackForm_agree", value="1")
-                            label(for="#FeedBackForm_agree") Я соглашаюсь на передачу персональных данных согласно #[br]#[a политике конфиденциальности] и #[a пользовательскому соглашению]
+                            label(for="FeedBackForm_agree") Я соглашаюсь на передачу персональных данных согласно #[br]#[a(href="http://ya.ru/", target="_blank") политике конфиденциальности] и #[a(href="http://ya.ru/", target="_blank") пользовательскому соглашению]
 
                     input.btn.btn-info.btn-lg.b-form__button(type="submit", value="Отправить заявку")
                     br
